<resources>
    <string name="app_name">AdoptAnAnimal</string>
    <string name="login">Login</string>
    <string name="uemail">Enter Email</string>
    <string name="name">Enter Name</string>
    <string name="upassword">Enter Password</string>
    <string name="reglink">New User? Sign Up</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="uaddress">Enter Address</string>
    <string name="signup">Sign Up</string>
    <string name="unumber">Enter Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="pet_info">PET INFO</string>
    <string name="user_info">USER INFO</string>

    <string-array name="TypePet">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>

</resources>