<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/royal_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/headingsize"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:textColor="@color/white"

        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtRegName"
        android:textSize="@dimen/textssize"
        android:background="@color/white"

        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uemail"
        android:textSize="@dimen/textssize"
        android:textColor="@color/white"

        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtRegEmail"
        android:background="@color/white"
        android:textSize="@dimen/textssize"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"

        android:text="@string/upassword"
        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtRegPassword"
        android:background="@color/white"

        android:textSize="@dimen/textssize"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="textWebPassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uaddress"
        android:textColor="@color/white"

        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtRegAddress"
        android:textSize="@dimen/textssize"
        android:background="@color/white"

        android:layout_marginTop="5dp"
        android:maxLines="3"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unumber"
        android:textSize="@dimen/textssize"
        android:textColor="@color/white"

        android:textStyle="bold"
        android:layout_margin="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edtRegPhone"
        android:textSize="@dimen/textssize"
        android:layout_marginTop="5dp"
        android:background="@color/white"

        android:inputType="number"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already A User? Sign In."
        android:id="@+id/txtUserLogin"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"

        android:textSize="@dimen/textssize"
        android:textStyle="bold"
/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup"
        android:id="@+id/btnRegistration"
        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:backgroundTint="@color/btncolor"
        android:layout_margin="20dp"/>


</LinearLayout>
</ScrollView>