<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/royal_blue"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="40dp"
        android:textSize="@dimen/headingsize"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uemail"
        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edtUserEmail"
        android:textSize="@dimen/textssize"
        android:background="@color/white"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upassword"
        android:textSize="@dimen/textssize"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/white"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:id="@+id/edtUserPassword"
        android:background="@color/white"
        android:textSize="@dimen/textssize"
        android:layout_marginTop="5dp"
        android:inputType="textWebPassword"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textssize"
        android:layout_margin="20dp"
        android:id="@+id/txtRegistration"
        android:textColor="@color/white"
        android:text="@string/reglink"
        android:textStyle="bold"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold"
        android:backgroundTint="@color/btncolor"
        android:layout_margin="20dp"
        />
</LinearLayout>